fix annotation cell overflow

--- a/styles/dmn-table.less
+++ b/styles/dmn-table.less
@@ -137,6 +137,8 @@
     .annotation {
       vertical-align: bottom;
       position: relative;
+      overflow: hidden;
+      text-overflow: ellipsis;
       .dmn-js-logo {
         .dmn-js-logo();
 
